# study-ai-number-recognition

./: .gitignore  Dockerfile  README.md  main.py  pyproject.toml  train_mnist.py  utils.py
.github/workflows/: release.yaml
frontend/: about.html  game.html  index.html  style.css
frontend/auth/: login.html  me.html  register.html
